Fixes #3410: RichTextEditor is missing background color (reindeer)
svn changeset:9070/svn branch:6.2

--- a/WebContent/VAADIN/themes/runo/styles.css
+++ b/WebContent/VAADIN/themes/runo/styles.css
@@ -1412,6 +1412,9 @@ textarea.v-textarea-prompt {
 	border: 1px solid #aaa;
 	overflow: hidden;
 }
+.v-richtextarea .gwt-RichTextArea {
+	background: #fff;
+}
 .v-richtextarea .gwt-RichTextToolbar .gwt-ToggleButton,
 .v-richtextarea .gwt-RichTextToolbar .gwt-PushButton {
 	float: left;
